--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,10 @@
-<h1>top</h1>
+<html>
+  <body>
+    <main>
+      <h1>welcome to <Bookers>!!</h1>
+      <p>In<Bookers>,</p>
+      <p>you can share and exchange your opinions , inpressions , and emotions</p>
+      <p>about various books!</p>
+    </main>
+  </body>
+</html>
