--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,14 +9,20 @@
             <th>Opinion</th>
           </tr>
         </thead>
-    
+
         <tbody>
           <% @book.each do |book| %>
             <tr>
-              <td><%= image_tag 'no_image.jpg' %></td>
-              <td><%= link_to book.title, book_path(book.id) %></td>
+              <%#= link_to book_path(book.id) do %>
+                <%#= image_tag book.get_image %>
+              <%# end %>
+              <td><%#= image_tag 'no_image.jpg' %></td>
+              <td>
+                <span>
+                  <%= link_to book.title, book_path(book.id) %>
+                </span>
+              </td>
               <td><%= book.body %></td>
-              <td></td>
             </tr>
           <% end %>
         </tbody>
