--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,27 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<html>
+  <body>
+    <main>
+      <div>
+        <h2>Book detail</h2>
+        <table>
+          <tbody>
+            <tr>
+              <td>
+                投稿ユーザー画像：<%#= image_tag 'no_image.jpg' %>
+                ユーザーネーム：<%= @book.user.name %>
+              </td>
+              <td>タイトル：<%= @book.title %></td>
+              <td>内容：<%= @book.body %></td>
+              <td>Edit</td>
+              <td>
+                <% if @book.user == current_user %>
+                  <%= link_to "Destroy", book_path(@book), method: :delete %>
+                <% end %>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </main>
+  </body>
+</html>
