--- a/app/views/books/_new.html.erb
+++ b/app/views/books/_new.html.erb
@@ -1,7 +1,7 @@
 <html>
   <body>
     <h1>New book</h1>
-      <%= form_with model: @book do |f| %>
+      <%= form_with model: Book.new do |f| %>
         <h4>title</h4>
           <%= f.text_field :title %>
         <h4>body</h4>
