--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,26 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<html><!--自分の本の編集-->
+    <body>
+        <main>
+            <div>
+                <h1>Editing Book</h1>
+                <%= form_with model: @book, url:update_book_path(@book.id), method: :patch do |f| %>
+      
+                   <div class="field">
+                     <label for="book_title">Title</label>
+                     <%= f.text_field :title %>
+                   </div>
+
+                   <div class="field">
+                     <label for="book_body">Body</label>
+                     <%= f.text_area :body %>
+                   </div>
+ 
+                   <div class="actions">
+                     <%= f.submit 'Update Book' %>
+                   </div>
+     
+                <% end %>
+            </div>
+        </main>
+    </body>
+</html>
