--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<html>
+<html><!--user/show/から飛べる-->
   <body>
     <main>
       <div>
@@ -8,13 +8,13 @@
             <tr>
               <td>
                 投稿ユーザー画像：<%#= image_tag 'no_image.jpg' %>
-                ユーザーネーム：<%= @book.user.name %>
+                ユーザーネーム：<%= book.user.name %>
               </td>
-              <td>タイトル：<%= @book.title %></td>
-              <td>内容：<%= @book.body %></td>
+              <td>タイトル：<%= book.title %></td>
+              <td>内容：<%= book.body %></td>
               <td>Edit</td>
               <td>
-                <% if @book.user == current_user %>
+                <% if book.user == current_user %>
                   <%= link_to "Destroy", book_path(@book), method: :delete %>
                 <% end %>
               </td>
