--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,30 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<html><!--ユーザーの編集ページ-->
+    <body>
+        <main>
+            <div>
+                <h2>User info</h2>
+                <%= form_with model: @user do |f| %>
+
+                    <div>
+                        <label for="inputName">Name</label>
+                        <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+                    </div>
+                    <div>
+                        <label for="inputImage">ProfileImage</label>
+                        <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+                    </div>
+                    <div>
+                         <label for="inputText">Introduction</label>
+                         <%= f.text_area :text, autofocus: true, id:"inputText", placeholder:""%>
+                        
+                        
+                    </div>
+                    <div>
+                        <%= f.submit 'Update User' %>
+                    </div>
+                <% end %>
+
+            </div>
+        </main>
+    </body>
+</html>
