--- a/app/views/users/_shared.html.erb
+++ b/app/views/users/_shared.html.erb
@@ -15,6 +15,7 @@
         </tr>
         <tr>
           <th>introduction</th>
+          <th><%#= user.introduction %></th>
         </tr>
       </tbody>
     </table>
