--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,25 +1,34 @@
 <html><!--自分の本の編集-->
     <body>
         <main>
-            <div>
+             <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+            
                 <h1>Editing Book</h1>
                 <%= form_with model: @book, url:edit_book_path(@book.id), method: :patch do |f| %>
       
-                   <div class="field">
+                   <div class="form-group">
                      <label for="book_title">Title</label>
                      <%= f.text_field :title %>
                    </div>
 
-                   <div class="field">
+                   <div class="form-group">
                      <label for="book_body">Body</label>
                      <%= f.text_area :body %>
                    </div>
  
-                   <div class="actions">
+                   <div class="form-group">
                      <%= f.submit 'Update Book' %>
                    </div>
+                   
+                   <%= link_to "Show", book_path(@book) %>
+                   |
+                   <%= link_to "Back", books_path %>
      
                 <% end %>
+            </div>
+            </div>
             </div>
         </main>
     </body>
