--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,14 @@
 <html><!--全ての本-->
   <body>
     <main>
-      <div>
+       <div class="container px-5 px-sm-0">
+        <div class="row">
+          <div class="col-md-3">
         <%= render 'users/shared', user: current_user %>
       </div>
-      <div>
-        <%= render 'books/new', books: @books %>
-      </div>
+     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
-      <table>
+      <table class="table table-hover table-inverse">
         <thead>
           <tr>
             <th>Title</th>
@@ -22,7 +22,7 @@
               <%= link_to book_path(book.id) do %>
                 <%= image_tag book.user.get_profile_image(50,50) %>
               <% end %>
-              
+
               <td>
                 <span>
                   <%= link_to book.title, book_path(book.id) %>
@@ -33,6 +33,9 @@
           <% end %>
         </tbody>
       </table>
+      </div>
+      </div>
+      </div>
     </main>
   </body>
 </html>
