--- a/app/views/users/_shared.html.erb
+++ b/app/views/users/_shared.html.erb
@@ -22,5 +22,14 @@
     <div><%= link_to "編集", edit_user_path(current_user) %></div>
 
     </div>
+    
+     <h1>New book</h1>
+      <%= form_with model: Book.new do |f| %>
+        <h4>title</h4>
+          <%= f.text_field :title %>
+        <h4>body</h4>
+          <%= f.text_area :body %>
+        <%= f.submit '投稿' %>
+      <% end %>
   </body>
 </html>
