--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,24 +2,27 @@
     <body>
         <main>
             <div>
+                 <div class="container">
+                  <div class="row">
+                <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
                 <h2>User info</h2>
                 <%= form_with model: @user do |f| %>
 
-                    <div>
+                    <div class="form-group">
                         <label for="inputName">Name</label>
                         <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
                     </div>
-                    <div>
+                    <div class="form-group">
                         <label for="inputImage">ProfileImage</label>
                         <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
                     </div>
-                    <div>
+                    <div class="form-group">
                          <label for="inputText">Introduction</label>
                          <%= f.text_area :text, autofocus: true, id:"inputText", placeholder:""%>
                         
                         
                     </div>
-                    <div>
+                    <div class="form-group">
                         <%= f.submit 'Update User' %>
                     </div>
                 <% end %>
