--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,14 +2,14 @@
 <html>
   <body>
     <main>
-      <div>
+      <div class="container px-5 px-sm-0">
+        <div class="row">
+          <div class="col-md-3">
         <%= render 'users/shared', user: current_user %>
       </div>
-      <div>
-        <%= render 'books/new', books: @books %>
-      </div>
+      <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
-      <table>
+      <table class="table table-hover table-inverse">
         <thead>
           <tr>
             <th>Title</th>
@@ -34,6 +34,9 @@
           <% end %>
         </tbody>
       </table>
+      </div>
+      </div>
+      </div>
     </main>
   </body>
 </html>
