--- a/app/views/users/_shared.html.erb
+++ b/app/views/users/_shared.html.erb
@@ -3,9 +3,9 @@
     <h2>User info</h2>
 
       <%= image_tag user.get_profile_image(100, 100) %>
-      
+
     <div>
-     
+
 
     <table>
       <tbody>
@@ -22,14 +22,24 @@
     <div><%= link_to "編集", edit_user_path(current_user) %></div>
 
     </div>
-    
+
      <h1>New book</h1>
       <%= form_with model: Book.new do |f| %>
-        <h4>title</h4>
-          <%= f.text_field :title %>
-        <h4>body</h4>
-          <%= f.text_area :body %>
-        <%= f.submit '投稿' %>
+
+      <div class="form-group">
+        <label for='book_title'>Title</label>
+          <br><%= f.text_field :title %>
+          </div>
+
+          <div class="form-group">
+        <label for='book_opinion'>Opinion</label>
+          <br><%= f.text_area :body %>
+          </div>
+
+          <div class="form-group">
+           <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
+        </div>
+
       <% end %>
   </body>
 </html>
