--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,17 +10,17 @@
 
                     <div class="form-group">
                         <label for="inputName">Name</label>
-                        <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+                        <br><%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
                     </div>
                     <div class="form-group">
                         <label for="inputImage">ProfileImage</label>
-                        <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+                        <br><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
                     </div>
                     <div class="form-group">
                          <label for="inputText">Introduction</label>
-                         <%= f.text_area :text, autofocus: true, id:"inputText", placeholder:""%>
-                        
-                        
+                         <br><%= f.text_area :text, autofocus: true, id:"inputText", placeholder:""%>
+
+
                     </div>
                     <div class="form-group">
                         <%= f.submit 'Update User' %>
