--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
 <html>
   <body>
     <main>
+      <p id="notice"><%= flash[:notice] %></p>
       <div class="container px-5 px-sm-0">
         <div class="row">
           <div class="col-md-3">
@@ -20,9 +21,11 @@
         <tbody>
           <% @books.each do |book| %>
             <tr>
+              <td>
               <%= link_to book_path(book.id) do %>
                 <%= image_tag book.user.get_profile_image(50,50) %>
               <% end %>
+              </td>
 
               <td>
                 <span>
