--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,7 @@
 <html><!--自分の本の編集-->
     <body>
         <main>
+            <p id="notice"><%= flash[:alert] %></p>
              <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
