--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,7 @@
 <html><!--user/show/から飛べる-->
   <body>
     <main>
+      <p id="notice"><%= flash[:notice] %></p>
        <div class="container">
         <div class="row">
           <div class="col-md-3">
