--- a/app/views/users/_shared.html.erb
+++ b/app/views/users/_shared.html.erb
@@ -1,45 +1,41 @@
 <html><!--左上テンプレート-->
   <body>
     <h2>User info</h2>
-
       <%= image_tag user.get_profile_image(100, 100) %>
-
     <div>
-
-
-    <table>
-      <tbody>
-        <tr>
-          <th>name</th>
-          <th><%= user.name %></th>
-        </tr>
-        <tr>
-          <th>introduction</th>
-          <th><%#= user.introduction %></th>
-        </tr>
-      </tbody>
-    </table>
-    <div><%= link_to "編集", edit_user_path(current_user) %></div>
-
+      <table class="table">
+        <tbody>
+          <tr>
+            <th>name</th>
+            <th><%= user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th><%= user.introduction %></th>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row"><%= link_to "編集", edit_user_path(current_user) %></div>
     </div>
-
-     <h1>New book</h1>
-      <%= form_with model: Book.new do |f| %>
+    
+    
+    <h2 class="mt-3">New book</h2>
+    <%= form_with model: Book.new do |f| %>
 
       <div class="form-group">
         <label for='book_title'>Title</label>
-          <br><%= f.text_field :title %>
-          </div>
+        <br><%= f.text_field :title %>
+      </div>
 
-          <div class="form-group">
+      <div class="form-group">
         <label for='book_opinion'>Opinion</label>
-          <br><%= f.text_area :body %>
-          </div>
+        <br><%= f.text_area :body %>
+      </div>
 
-          <div class="form-group">
-           <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
-        </div>
+      <div class="form-group">
+        <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
+      </div>
 
-      <% end %>
+    <% end %>
   </body>
 </html>
