--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,7 +18,7 @@
                     </div>
                     <div class="form-group">
                          <label for="inputText">Introduction</label>
-                         <br><%= f.text_area :text, autofocus: true, id:"inputText", placeholder:""%>
+                         <br><%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:""%>
 
 
                     </div>
