--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -20,7 +20,7 @@
                    </div>
 
                    <div class="form-group">
-                     <%= f.submit 'Update Book' %>
+                     <%= f.submit 'Update Book', class: "btn btn-success" %>
                    </div>
 
                    <%= link_to "Show", book_path(@book) %>
