--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,15 +14,24 @@
           <tbody>
             <tr>
               <td>
-                <%= image_tag @book.user.get_profile_image(50,50) %>
+                <%= image_tag @book.user.get_profile_image(100,100) %>
                 <br><%= link_to @book.user.name, user_path(current_user) %>
               </td>
               <td><%= @book.title %></td>
               <td><%= @book.body %></td>
-              <td><%= link_to "Edit", edit_book_path(@book) %></td>
+
+
               <td>
                 <% if @book.user == current_user %>
-                  <%= link_to "Destroy", @book, method: :delete %>
+                  <%= link_to edit_book_path(@book), class:"btn btn-success btn-sm", method: :get do %>
+                    <div>Edit</div>
+                  <% end %>
+                <% end %>
+              </td>
+
+              <td>
+                <% if @book.user == current_user %>
+                  <%= link_to "Destroy", book_path(@book), class:"btn btn-danger btn-sm", method: :delete %>
                 <% end %>
               </td>
             </tr>
