--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,14 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+
   <body>
     <header>
-      <body class="d-flex flex-column vh-100">
-    <header class="shadow-sm">
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
+          <span class="nav-item">
+            <%= link_to "Bookers", root_path, class: 'nav-link text-light' %>
+          </span>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,31 +28,53 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
 
+
       <% if user_signed_in? %>
+      
         <li class="nav-item">
-          <%= link_to "Home", user_path(current_user.id), class: 'nav-link text-dark' %>
+          <%= link_to user_path(current_user.id), class: 'nav-link text-light' do %>
+            <i class="fas fa-home"></i>Home
+          <% end %>
         </li>
+        
         <li class="nav-item">
-          <%= link_to 'Users', users_path, class: 'nav-link text-dark' %>
+          <%= link_to users_path, class: 'nav-link text-light' do %>
+            <i class="fas fa-users"></i>Users
+          <% end %>
         </li>
+        
         <li class="nav-item">
-          <%= link_to 'Books', books_path, class: 'nav-link text-dark' %>
+          <%= link_to books_path, class: 'nav-link text-light' do %>
+            <i class="fas fa-book-open"></i>Books
+          <% end %>
         </li>
+        
         <li class="nav-item">
-          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+          <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
+            <i class="fas fa-sign-out-alt"></i>Logout
+          <% end %>
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Home", root_path, class: 'nav-link text-dark' %>
+          <%= link_to root_path, class: 'nav-link text-light' do %>
+            <i class="fas fa-home"></i>Home
+          <% end %>
+        </li>
+        
+        <li class="nav-item">
+          <%= link_to about_path, class: 'nav-link text-light' do %>
+            <i class="fas fa-link"></i>About
+          <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to "About", about_path, class: 'nav-link text-dark' %>
+          <%= link_to new_user_registration_path, class: 'nav-link text-light' do %>
+            <i class="fas fa-user-plus"></i>Sign up
+          <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-dark' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Log in", new_user_session_path, class: 'nav-link text-dark' %>
+          <%= link_to new_user_session_path, class: 'nav-link text-light' do %>
+            <i class="fas fa-sign-in-alt"></i>Login
+          <% end %>
         </li>
       <% end %>
       </ul>
