--- a/app/views/users/_shared.html.erb
+++ b/app/views/users/_shared.html.erb
@@ -15,7 +15,11 @@
           </tr>
         </tbody>
       </table>
-      <div class="row"><%= link_to "編集", edit_user_path(current_user) %></div>
+      <div class="row">
+        <%= link_to edit_user_path(current_user), class: "btn btn-outline-secondary btn-block edit_user", method: :get do %>
+        <i class="fas fa-user-cog"></i>
+        <% end %>
+      </div>
     </div>
     
     
