--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
                         <br><%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
                     </div>
                     <div class="form-group">
-                        <label for="inputImage">ProfileImage</label>
+                        <label for="inputImage">Image</label>
                         <br><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
                     </div>
                     <div class="form-group">
@@ -23,7 +23,7 @@
 
                     </div>
                     <div class="form-group">
-                        <%= f.submit 'Update User' %>
+                        <%= f.submit 'Update User', class: "btn btn-secondary" %>
                     </div>
                 <% end %>
 
