--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,13 +1,25 @@
 <html><!--自分の本の編集-->
-    <body>
-        <main>
-            <p id="notice"><%= flash[:alert] %></p>
-             <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+  <body>
+    <main>
+      <p id="notice"><%= flash[:alert] %></p>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 
                 <h1>Editing Book</h1>
-                <%= form_with model: @book, url:edit_book_path(@book.id), method: :patch do |f| %>
+          <div id="error_explanation">
+            <% if @book.errors.any? %>
+              <h3>
+                <%= @book.errors.count %>error
+              </h3>
+              <ul>
+                <% @book.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            <% end %>
+          </div>
+                <%= form_with model: @book do |f| %>
 
                    <div class="form-group">
                      <label for="book_title">Title</label>
@@ -20,7 +32,7 @@
                    </div>
 
                    <div class="form-group">
-                     <%= f.submit 'Update Book', class: "btn btn-success" %>
+                     <%= f.submit "Update Book", class:"btn btn-success" %>
                    </div>
 
                    <%= link_to "Show", book_path(@book) %>
@@ -28,9 +40,9 @@
                    <%= link_to "Back", books_path %>
 
                 <% end %>
-            </div>
-            </div>
-            </div>
-        </main>
-    </body>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
