--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,9 +3,23 @@
     <main>
       <p id="notice"><%= flash[:alert] %></p>
        <div class="container px-5 px-sm-0">
+         <div id="error_explanation">
+         <% if @book.errors.any? %>
+         <h3>
+          <%= @book.errors.count %>error
+          </h3>
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+        </div>
         <div class="row">
           <div class="col-md-3">
-        <%= render 'users/shared', user: current_user %>
+            
+       <%= render 'users/shared', user: @user %>
+        
       </div>
      <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
