--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,7 @@
 <html>
   <body>
     <main>
+      <p id="notice"><%= flash[:notice] %></p>
       <div class="container">
         <div class="row">
           <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
@@ -20,7 +21,7 @@
               </div>
 
               <div class="row">
-                <%= link_to "Sign up", new_user_session_path, class:"btn btn-success btn-sm btn-block sign-up" %>
+                <%= link_to "Sign up", new_user_registration_path, class:"btn btn-success btn-sm btn-block sign-up" %>
               </div>
             </div>
           </div>
