--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,39 +16,34 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <span class="nav-item">
+          <span class="navbar-brand">
             <%= link_to "Bookers", root_path, class: 'nav-link text-light' %>
           </span>
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
 
 
       <% if user_signed_in? %>
-      
+
         <li class="nav-item">
           <%= link_to user_path(current_user.id), class: 'nav-link text-light' do %>
             <i class="fas fa-home"></i>Home
           <% end %>
         </li>
-        
+
         <li class="nav-item">
           <%= link_to users_path, class: 'nav-link text-light' do %>
             <i class="fas fa-users"></i>Users
           <% end %>
         </li>
-        
+
         <li class="nav-item">
           <%= link_to books_path, class: 'nav-link text-light' do %>
             <i class="fas fa-book-open"></i>Books
           <% end %>
         </li>
-        
+
         <li class="nav-item">
           <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
             <i class="fas fa-sign-out-alt"></i>Logout
@@ -60,7 +55,7 @@
             <i class="fas fa-home"></i>Home
           <% end %>
         </li>
-        
+
         <li class="nav-item">
           <%= link_to about_path, class: 'nav-link text-light' do %>
             <i class="fas fa-link"></i>About
