--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,9 @@
       <div class="container px-5 px-sm-0">
         <div class="row">
           <div class="col-md-3">
-            <%= render 'users/shared', user: current_user %>
+            
+            <%= render 'shared', user: @user %>
+            
           </div>
           <div class="col-md-8 offset-md-1">
             <h2>Books</h2>
