--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -36,7 +36,7 @@
           <% Book.all.each do |book| %>
             <tr>
               <td>
-              <%= link_to book_path(book.id) do %>
+              <%= link_to user_path(book.user) do %>
                 <%= image_tag book.user.get_profile_image(50,50) %>
               <% end %>
               </td>
