--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
 
         <li class="nav-item">
           <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
-            <i class="fas fa-sign-out-alt"></i>Logout
+            <i class="fas fa-sign-out-alt"></i>Log out
           <% end %>
         </li>
       <% else %>
@@ -68,7 +68,7 @@
         </li>
         <li class="nav-item">
           <%= link_to new_user_session_path, class: 'nav-link text-light' do %>
-            <i class="fas fa-sign-in-alt"></i>Login
+            <i class="fas fa-sign-in-alt"></i>Log in
           <% end %>
         </li>
       <% end %>
@@ -77,7 +77,9 @@
       </div>
       </nav>
     </header>
+    <main>
     <%= yield %>
+    </main>
      <footer>
       <div class="container mt-5">
         <div class="row">
