--- a/app/views/users/_shared.html.erb
+++ b/app/views/users/_shared.html.erb
@@ -1,7 +1,7 @@
 <html><!--左上テンプレート-->
   <body>
     <h2>User info</h2>
-      <%= image_tag user.get_profile_image(100, 100) %>
+    <%= image_tag user.get_profile_image(100, 100) %>
     <div>
       <table class="table">
         <tbody>
@@ -15,24 +15,18 @@
           </tr>
         </tbody>
       </table>
-
-
       <div class="row">
         <% if @user == current_user %>
-        <%= link_to edit_user_path(current_user), class: "btn btn-outline-secondary btn-block edit_user", method: :get do %>
-        <i class="fas fa-user-cog"></i>
-        <% end %>
+          <%= link_to edit_user_path(current_user), class: "btn btn-outline-secondary btn-block edit_user", method: :get do %>
+            <i class="fas fa-user-cog"></i>
+          <% end %>
         <% else %>
-        <%= link_to user_path(current_user), class: "btn btn-outline-secondary btn-block edit_user", method: :get do %>
-          <i class="fas fa-user-cog"></i>
-        <% end %>
+          <%= link_to user_path(current_user), class: "btn btn-outline-secondary btn-block edit_user", method: :get do %>
+            <i class="fas fa-user-cog"></i>
+          <% end %>
         <% end %>
       </div>
-
-
     </div>
-
-
     <h2 class="mt-3">New book</h2>
     <%= form_with model: Book.new do |f| %>
 
@@ -47,10 +41,8 @@
       </div>
 
       <div class="form-group">
-        <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
-        <%#= f.submit 'Create Book', class:"btn btn-success" %>
+        <%= f.submit 'Create Book', class:"btn btn-success" %>
       </div>
-
     <% end %>
   </body>
 </html>
