--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,9 +6,7 @@
       <div class="container px-5 px-sm-0">
         <div class="row">
           <div class="col-md-3">
-            
             <%= render 'shared', user: @user %>
-            
           </div>
           <div class="col-md-8 offset-md-1">
             <h2>Books</h2>
@@ -21,16 +19,14 @@
                   <th></th>
                 </tr>
               </thead>
-
               <tbody>
                 <% @books.each do |book| %>
                   <tr>
                     <td>
-                      <%= link_to book_path(book.id) do %>
+                      <%= link_to user_path(book.user) do %>
                         <%= image_tag book.user.get_profile_image(50,50) %>
                       <% end %>
                     </td>
-
                     <td>
                       <span>
                         <%= link_to book.title, book_path(book.id) %>
