--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,6 +23,7 @@
                       <%= link_to edit_book_path(@book), class:"btn btn-success btn-sm", method: :get do %>
                         <div>Edit</div>
                       <% end %>
+                      <% else %>
                     <% end %>
                   </td>
                   <td>
