--- a/app/views/users/_shared.html.erb
+++ b/app/views/users/_shared.html.erb
@@ -16,15 +16,17 @@
         </tbody>
       </table>
       <div class="row">
+
         <% if @user == current_user %>
           <%= link_to edit_user_path(current_user), class: "btn btn-outline-secondary btn-block edit_user", method: :get do %>
             <i class="fas fa-user-cog"></i>
           <% end %>
         <% else %>
-          <%= link_to user_path(current_user), class: "btn btn-outline-secondary btn-block edit_user", method: :get do %>
+          <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block edit_user", method: :get do %>
             <i class="fas fa-user-cog"></i>
           <% end %>
         <% end %>
+
       </div>
     </div>
     <h2 class="mt-3">New book</h2>
